# tasko

./: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
terminal_ui/: Cargo.toml
terminal_ui/src/: main.rs
